[package]
name = "comune"
version = "0.1.0"
edition = "2021"

[dependencies]
inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "master", features = ["llvm12-0"] }
clap = { version = "3.2.16", features = ["derive"] }
colored = "2.0.0"
rayon = "1.5"
mangling = "0.2.3"
backtrace = "0.3"
color-eyre = "0.6"